--- a/Code Project/src/output.css
+++ b/Code Project/src/output.css
@@ -554,6 +554,10 @@ video {
   display: none;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .fixed {
   position: fixed;
 }
@@ -566,28 +570,20 @@ video {
   position: relative;
 }
 
-.left-0 {
-  left: 0px;
+.left-6 {
+  left: 1.5rem;
 }
 
-.right-5 {
-  right: 1.25rem;
+.top-24 {
+  top: 6rem;
 }
 
-.top-0 {
-  top: 0px;
+.top-6 {
+  top: 1.5rem;
 }
 
-.top-5 {
-  top: 1.25rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.top-1\/2 {
-  top: 50%;
+.z-40 {
+  z-index: 40;
 }
 
 .z-50 {
@@ -602,6 +598,10 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-2 {
@@ -620,16 +620,24 @@ video {
   margin-left: 8rem;
 }
 
-.ml-64 {
-  margin-left: 16rem;
+.ml-56 {
+  margin-left: 14rem;
 }
 
-.ml-auto {
-  margin-left: auto;
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .inline-block {
@@ -638,6 +646,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-12 {
@@ -652,12 +664,12 @@ video {
   height: 1rem;
 }
 
-.h-screen {
-  height: 100vh;
+.h-\[calc\(100vh-48px\)\] {
+  height: calc(100vh - 48px);
 }
 
-.min-h-screen {
-  min-height: 100vh;
+.h-screen {
+  height: 100vh;
 }
 
 .w-12 {
@@ -668,8 +680,8 @@ video {
   width: 5rem;
 }
 
-.w-48 {
-  width: 12rem;
+.w-36 {
+  width: 9rem;
 }
 
 .w-\[1\.5px\] {
@@ -684,6 +696,10 @@ video {
   width: 32px;
 }
 
+.w-\[48px\] {
+  width: 48px;
+}
+
 .w-\[calc\(100\%-2rem\)\] {
   width: calc(100% - 2rem);
 }
@@ -693,25 +709,16 @@ video {
   width: fit-content;
 }
 
-.w-full {
-  width: 100%;
+.flex-1 {
+  flex: 1 1 0%;
 }
 
-.w-24 {
-  width: 6rem;
+.flex-grow {
+  flex-grow: 1;
 }
 
-.w-36 {
-  width: 9rem;
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-180 {
-  --tw-rotate: 180deg;
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -721,6 +728,14 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.list-inside {
+  list-style-position: inside;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .flex-col {
@@ -739,16 +754,18 @@ video {
   justify-content: space-between;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+.overflow-auto {
+  overflow: auto;
 }
 
 .overflow-hidden {
@@ -757,6 +774,10 @@ video {
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .rounded-full {
@@ -814,6 +835,14 @@ video {
   background-color: rgba(247, 237, 218, 0.8);
 }
 
+.p-1\.5 {
+  padding: 0.375rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -852,18 +881,40 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .text-center {
   text-align: center;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-justify {
+  text-align: justify;
+}
+
+.font-telma {
+  font-family: Telma-Medium;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -879,6 +930,11 @@ video {
   color: rgb(9 51 44 / var(--tw-text-opacity, 1));
 }
 
+.text-custom-fiery-glow {
+  --tw-text-opacity: 1;
+  color: rgb(240 83 28 / var(--tw-text-opacity, 1));
+}
+
 .text-custom-fiery-glow-0\.5 {
   color: rgba(240, 83, 28, 0.5);
 }
@@ -888,9 +944,8 @@ video {
   color: rgb(247 237 218 / var(--tw-text-opacity, 1));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition {
@@ -970,10 +1025,6 @@ body {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:text-shadow-glow:hover {
-  text-shadow: 0 0 40px rgba(240, 83, 28);
-}
-
 .group:hover .group-hover\:scale-110 {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -982,8 +1033,4 @@ body {
 
 .group:hover .group-hover\:bg-custom-fiery-glow-0\.8 {
   background-color: rgba(240, 83, 28, 0.8);
-}
-
-.group:hover .group-hover\:stroke-custom-fiery-glow-0\.8 {
-  stroke: rgba(240, 83, 28, 0.8);
 }
